fontawesome icon not showing design fix

--- a/scss/blocks/_select-date-block.scss
+++ b/scss/blocks/_select-date-block.scss
@@ -78,6 +78,7 @@
                 &:before {
                     content: '\f00c';
                     font-family: 'Font Awesome 5 Free';
+                    font-weight: 900;
                     background: #29bf12;
                     position: absolute;
                     top: 0;
