--- a/scss/component/_datepicker.scss
+++ b/scss/component/_datepicker.scss
@@ -38,6 +38,7 @@
         content: '\f073';
         color: $gray-400;
         font-family: "Font Awesome 5 Free";
+        font-weight: 900;
         position: absolute;
         top: 13px;
         right: 15px;
@@ -96,6 +97,7 @@
             content: '\f073';
             color: $gray-400;
             font-family: "Font Awesome 5 Free";
+            font-weight: 900;
             position: absolute;
             top: 9px;
             right: 15px;
