--- a/scss/component/_form.scss
+++ b/scss/component/_form.scss
@@ -60,6 +60,7 @@ form {
         content: '\f0dd';
         color: $gray-900;
         font-family: "Font Awesome 5 Free";
+        font-weight: 900;
         font-size: 16px;
         position: absolute;
         top: 10px;
@@ -96,6 +97,7 @@ form {
         content: '\f002';
         color: $gray-400;
         font-family: "Font Awesome 5 Free";
+        font-weight: 900;
         position: absolute;
         font-size: 14px;
         top: 10px;
